src/tests/zustand-pick/syntax-errors/pick-multiple-arguments.js
const { user } = useGlobalStore.pick("order", "user");
